--- a/CSharp5Nhom2/Views/Home/Login.cshtml
+++ b/CSharp5Nhom2/Views/Home/Login.cshtml
@@ -50,7 +50,7 @@
         }
 </style>
 <div class="container1">
-    <form asp-action="Login" method="post">
+    <form asp-action="LoginH" method="post">
         <div>
             <label for="username">Username:</label>
             <input type="text" id="username" name="username" required />
