--- a/CSharp5Nhom2/Views/User/Create.cshtml
+++ b/CSharp5Nhom2/Views/User/Create.cshtml
@@ -9,7 +9,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="SignUp">
+        <form asp-action="SignUpNV">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @*<div class="form-group">
             <label asp-for="IDUser" class="control-label"></label>
@@ -48,7 +48,7 @@
                 <span asp-validation-for="Address" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="CreateNV" class="btn btn-primary" />
             </div>
         </form>
     </div>
